# eiger

./: .gitignore  .hgignore  CHANGES  Eiger.py  LICENSE  README  README.md  SConstruct  setup.py
api/: GNUmakefile  Makefile.am  bootstrap.sh  configure.ac  default_backend.cpp  eiger.cpp  eiger.h  eiger_loader.cpp  fake_backend.cpp  fakeeiger.cpp  fakeeiger.h  fakekeywords.h  feloader.cpp  mfeloader.cpp  mpifakeeiger.cpp  mpifakeeiger.h  mysql_backend.cpp
database/: index-patch.sql  mysql2sqlite.sh  schema.sql
documentation/: api.tex  dependencies.tex  eiger.tex  example.tex  fakeapi.tex  faq.tex  implementation.tex  modelformat.tex  mpifakeapi.tex  overview.tex
eiger/: API.py  ClusterAnalysis.py  DataCube.py  Eiger.py  LinearRegression.py  MARS.py  ModelAnalysis.py  NearestNeighbors.py  PCA.py  PerformanceModel.py  PerformanceSimulator.py  TestModeling.py  TestPerformanceModel.py  data.py  database.py  newAPI.py
eiger/test/: API_test.py
elwperf/: Make.ccsv  Make.cfake  Make.cscreen  Make.csv  Make.f90csv  Make.fake  Make.fplain  Makefile  Makefile.mpieiger  Makefile.mpifakeeiger  README  VERSION  aperf.cpp  aperf.h  app.F90  cperf.cpp  csvformatter.cpp  csvformatter.h  diffrusage.cpp  eigerformatter.cpp  eigerformatter.h  elwperf.tex  eperf.cpp  eperf.h  gencsave.sh  genfsave.sh  looper.sh  lwperf.h  lwperf_c.h  lwperf_f.h  resetdb  updateLoggersF90.sh
elwperf/doc/: Makefile
elwperf/examples/: Make.cplain  Make.cscreen  Make.f90fake  capp.c  cxxapp.cpp
elwperf/sand/: Background.tex  CommonAbstract.tex  CommonAck.tex  CommonIntro.tex  Implementation.tex  Makefile  SANDdistribution.tex  SANDmath.tex  analysis.tex  building.tex  capi.tex  cxxapi.tex  elwperf_2_0.bib  elwperf_2_0.tex  fapi.tex  future.tex  mixedl.tex  reuse.tex  running.tex  speed.tex
elwperf/src/: diffrusage.h  eperf.cpp  gencsave.body.sh  updateLoggersC.sh
elwperf/valgrind/: supp
examples/: contents.txt  database_dump.sql  gold-threshold-0.01.model  gold-threshold-0.1.model  gold.model  matmul.cc
examples/energy-tutorial/: HPCCG.cpp  Makefile  README  hpccg.ini  initialize.cpp  main.cpp
examples/synthetic-gpgpu3/: create-database.py
lwperf/: LICENSE  README  todo
lwperf/doc/: Makefile  lwperf.tex
lwperf/examples/: Make.c  Make.eiger  Make.f90  Make.plain  Makefile  Makefile.mpieiger  resetdb  runfake
lwperf/src/: aperf.h  cperf.cpp  csvbackend.cpp  csvbackend.h  csvformatter.cpp  csvformatter.h  datakind.h  eigerbackend.cpp  eigerbackend.h  eigerformatter.cpp  eigerformatter.h  eperf.h  formatter.h  fperf.F90  gencsave.body.sh  gencsave.sh  genfsave.sh  lwperf.h  lwperf_c.h  lwperf_f.h  nullbackend.h  perf.cpp  perf.h  sperf.cpp  sperf.h  updateLoggersC.sh  updateLoggersCXX.sh  updateLoggersF90.sh
ocelot-trace/implementation/: BasicBlockCountGenerator.cpp  BranchTraceGenerator.cpp  InstructionTraceGenerator.cpp  KernelDimensionsGenerator.cpp  KernelEntry.cpp  KernelParametersGenerator.cpp  KernelTimingGenerator.cpp  MachineAttributesGenerator.cpp  MemoryEfficiencyGenerator.cpp  ParallelismTraceGenerator.cpp  TraceConfiguration.cpp
ocelot-trace/interface/: BranchTraceGenerator.h  InstructionTraceGenerator.h  KernelDimensionsGenerator.h  KernelEntry.h  KernelParametersGenerator.h  KernelTimingGenerator.h  MachineAttributesGenerator.h  MemoryEfficiencyGenerator.h  ParallelismTraceGenerator.h  TraceConfiguration.h
tests/: contents.txt  gold.model  test.sh
tests/sstmacro/: edot.sh
tests/synthetic-gpgpu3/: data.py
